@@ -34,6 +34,7 @@ noinst_PROGRAMS = 		\
 	sbuild-lock		\
 	sbuild-log		\
 	sbuild-nostream		\
+	sbuild-parse-value	\
 	sbuild-util
 
 TESTS = $(noinst_PROGRAMS)
@@ -69,6 +70,9 @@ sbuild_log_LDADD = libtest.la
 
 sbuild_nostream_SOURCES = sbuild-nostream.cc
 sbuild_nostream_LDADD = libtest.la
+
+sbuild_parse_value_SOURCES = sbuild-parse-value.cc
+sbuild_parse_value_LDADD = libtest.la
 
 sbuild_util_SOURCES = sbuild-util.cc
 sbuild_util_LDADD = libtest.la
